<resources>
    <string name="app_name">DailyDime</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Expense</string>
    <string name="menu_income">Income</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="type_your_email">Type your Email</string>
    <string name="daily_dime">Daily Dime</string>
    <string name="type_your_date_of_birth">Type your Date Of Birth</string>
    <string name="type_your_last_name">Type your last name</string>
    <string name="type_your_first_name">Type your first name</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="menu_expense_tracker">Expense Tracker</string>
    <string name="update_profile">Update Profile</string>
    <string name="menu_profile">Profile</string>
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>

    </string-array>

    <string name="month_prompt">Select Month</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latest_price_format">Latest Price: $%.2f</string>
    <string name="profit_loss_format">Profit/Loss: $%.2f</string>

</resources>