<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cmpt362team21.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.cmpt362team21.ui.addExpense.AddExpenseFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_income"
        android:name="com.cmpt362team21.ui.income.IncomeFragment"
        android:label="@string/menu_income"
        tools:layout="@layout/fragment_income" />

    <fragment
        android:id="@+id/nav_expense_tracker"
        android:name="com.cmpt362team21.ui.expenseTracker.ExpenseTrackerFragment"
        android:label="@string/menu_expense_tracker"
        tools:layout="@layout/fragment_expense_tracker" />

    <fragment
        android:id="@+id/nav_import_csv"
        android:name="com.cmpt362team21.ui.importCSV.ImportCSVFragment"
        android:label="Visualize Finances"
        tools:layout="@layout/fragment_import_csv" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.cmpt362team21.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <activity
        android:id="@+id/nav_bank_tracker"
        android:name="com.cmpt362team21.ui.bankLocator.BankAtmLocator"
        android:label="Bank/Atm Locator"
        tools:layout="@layout/activity_bank_atm_locator" />

</navigation>