<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_foreground"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_expense_tracker"
            android:icon="@drawable/ic_menu_expense_tracker"
            android:title="@string/menu_expense_tracker" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/expense_icon"
            android:title="Add New Expense" />
        <item
            android:id="@+id/nav_income"
            android:icon="@drawable/ic_menu_income"
            android:title="@string/menu_income" />
        <item
            android:id="@+id/nav_import_csv"
            android:icon="@drawable/graph_icon"
            android:title="Import CSV" />

    </group>
</menu>